deploy/deployment.ARM.yaml
apiVersion: v1
kind: Service
metadata:
  name: dict
  namespace: mialkin
spec:
  selector:
    app: dict
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http-dict
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dict
  namespace: mialkin
  labels:
    app: dict
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dict
  template:
    metadata:
      namespace: mialkin
      labels:
        app: dict
        version: 1.0
    spec:
      containers:
        - name: dict
          image: registry.gitlab.com/mialkin/dict.mialkin.ru:arm64v8
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/SQLite-files
              name: dict
      volumes:
        - name: dict
          persistentVolumeClaim:
            claimName: dict
      imagePullSecrets:
        - name: dict
